--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -9,6 +9,7 @@ on:
         - master
       paths:
         - .github/workflows/manual-trigger.yml
+        - src/job.yml
         - cli/setup.sh
       
 jobs:
@@ -23,4 +24,10 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
-
+    - name: setup
+      run: bash setup.sh
+      working-directory: cli
+      continue-on-error: true
+    - name: run job
+      run: az ml job create --file job.yml --web --resource-group ML-RG --workspace-name ML0
+      working-directory: src
