--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -29,5 +29,5 @@ jobs:
       working-directory: cli
       continue-on-error: true
     - name: run job
-      run: az ml job create --file job.yml --web --resource-group ML-RG --workspace-name ML0
+      run: az ml job create --file job.yml --web --resource-group ${{secrets.AZURE_RESOURCE_GROUP}} --workspace-name ${{secrets.AZURE_WORKSPACE_NAME}}
       working-directory: src
