--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -1,6 +1,6 @@
 on: workflow_dispatch
 
-name: Azure Login Sample / Manually trigger an Azure Machine Learning job
+name: Manually trigger an Azure Machine Learning job
 
 jobs:
   train-model:
@@ -13,4 +13,5 @@ jobs:
         with:
           creds: '${{secrets.AZURE_CREDENTIALS}}'
       - name: Trigger Azure Machine Learning job
-        run: az ml job create --file src/job.yml
+        run: az ml job create --file job.yml --web --resource-group ${{secrets.AZURE_RESOURCE_GROUP}} --workspace-name ${{secrets.AZURE_WORKSPACE_NAME}}
+        working-directory: src
