--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -1,4 +1,12 @@
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+    pull_request:
+        branches:
+          - master
+        paths:
+          - .github/workflows/manual-trigger.yml
+          - src/job.yml
+          - cli/setup.sh
 
 name: Manually trigger an Azure Machine Learning job
 
@@ -6,6 +14,8 @@ jobs:
   train-model:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repo
+        uses: actions/checkout@main
       - name: Install az ml extension
         run: az extension add -n ml -y
       - name: Log in with Azure
@@ -13,4 +23,5 @@ jobs:
         with:
           creds: '${{secrets.AZURE_CREDENTIALS}}'
       - name: Trigger Azure Machine Learning job
-        run: az ml job create --file src/job.yml --web --resource-group ${{secrets.AZURE_RESOURCE_GROUP}} --workspace-name ${{secrets.AZURE_WORKSPACE_NAME}}
+        run: az ml job create --file job.yml --web --resource-group ${{secrets.AZURE_RESOURCE_GROUP}} --workspace-name ${{secrets.AZURE_WORKSPACE_NAME}}
+        working-directory: src
